test_suite5/ALAN/test_suite/alan-2022-examples/failing/007990_mutation.alan
source hk begin while 24 put do relax end end
